# octo-travel-synthetic-api-simulator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
api-spec/: octo-spec.yaml
docs/: architecture.md  observability.md
metrics/: .gitignore  docker-compose.otel.yml
octo-std/: get-products.yaml
src/: cli.py
src/common/: config.py
src/models/: __init__.py  availability.py  errors.py  product.py
src/seeder/: generator.py  ollama_client.py  prompt_builder.py  sample_index.py
src/server/: __init__.py  app.py  error_handler.py  middleware.py
src/server/routes/: availability.py  products.py
src/state/: __init__.py  manager.py
src/telemetry/: __init__.py  setup.py
tests/: conftest.py  test_generator.py  test_models.py  test_ollama_client.py  test_prompt_builder.py  test_sample_index.py  test_server.py  test_state_manager.py
